--- a/css/main.scss
+++ b/css/main.scss
@@ -11,14 +11,16 @@
   width: 100%;
   height: 600px;
 
-	h1{
+	h1, h3{
 		text-align: center;
+    color: white;
 	}
 
 	.foto {
-	  background-image: url("imag/z.jpg");
+	  background: url(../img/z.jpg);
 	  background-repeat: no-repeat;
-	  background-position:  10px 30px;
+    height: 625px;
+    margin: 0 auto;
 	}
 
   .esfera{
@@ -31,44 +33,44 @@
 
   .estrella1{
   	@include star(35px);
-  	@include centerer(2%,50%);
+  	@include centerer(14%,49%);
   }
 
 	.estrella2{
   	@include star-center(30px, 5px);
   	@include star(20px);
-  	@include centerer(18%,57%);
+  	@include centerer(18%,56.5%);
 
   }
 
   .estrella3{
   	@include star(18px);
   	@include star-center(20px, 10px);
-  	@include centerer(35%,64%);
+  	@include centerer(35%,58%);
   }
 
   .estrella4{
   	@include star(15px);
   	@include star-center(20px, 10px);
-  	@include centerer(55%,56%);
+  	@include centerer(51%,54%);
   }
 
   .estrella5{
   	@include star(12px);
   	@include star-center(25px, 10px);
-  	@include centerer(56%,41%);
+  	@include centerer(53%,46%);
   }
 
   .estrella6{
   	@include star(10px);
   	@include star-center(25px, 15px);
-  	@include centerer(38%,35%);
+  	@include centerer(41%,41%);
   }
 
   .estrella7{
   	@include star(10px);
   	@include star-center(25px, 10px);
-  	@include centerer(18%,42%);
+  	@include centerer(24%,42%);
   }
 
 	.brillo{
